fixed dark mode

--- a/vibien/src/app/globals.css
+++ b/vibien/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a0a0a;
+  --foreground: #ffffff;
 }
 
 @theme inline {
@@ -26,7 +26,7 @@ body {
 }
 
 .vertical-scroll-container {
-  max-height: fit-content;
+  height: min-content;
   overflow-y: auto;
 }
 
